# Kursovaya_3

./: pyproject.toml
src/: functions.py
