[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["aleksey_kluchanskiy <alesha-mail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
